[package]
name = "r2d2_odbc_api"
version = "0.1.4"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT"
description = "ODBC support for the r2d2 connection pool Via odbc-api Based on https://github.com/Koka/r2d2-odbc"
repository = "https://github.com/genusistimelord/r2d2_odbc_api"
documentation = "https://docs.rs/r2d2_odbc_api"
homepage = "https://github.com/genusistimelord/r2d2_odbc_api"
keywords = ["odbc", "sql", "pool", "database", "r2d2"]
categories = ["database"]

[lib]
name = "r2d2_odbc_api"
path = "src/lib.rs"
test = false

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
lazy_static = "1.4.0"
r2d2 = "0.8.10"
odbc-api = "0.49.0"
anyhow = "1.0.65"
rocket = { version = "0.5.0-rc.2", optional = true }
rocket_sync_db_pools = { version = "0.1.0-rc.2", optional = true }
crossbeam-queue = "0.3.6"
thiserror = "1.0.35"

[features]
default = ["rocket_pooling"]
rocket_pooling = ["rocket", "rocket_sync_db_pools"]
iodbc = ["odbc-api/iodbc"]
hfsql = ["odbc-api/iodbc"]

[package.metadata.docs.rs]
features = ["rocket_pooling"]
no-default-features = false

